plugins for packing the project into a jar file

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- GSON for parsing JSON files -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
@@ -95,6 +96,7 @@
                 </executions>
             </plugin>
             <plugin>
+                <!-- Javadoc plugin for generating documentation -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.6.3</version>
@@ -109,6 +111,7 @@
                     <doctitle>Koteseni Game Documentation</doctitle>
                     <windowtitle>Koteseni Game API</windowtitle>
 
+                    <!-- UMLDoclet for generating UML diagrams in the javadoc -->
                     <doclet>nl.talsmasoftware.umldoclet.UMLDoclet</doclet>
                     <docletArtifact>
                         <groupId>nl.talsmasoftware</groupId>
@@ -121,6 +124,32 @@
                         <additionalOption>-umlImageFormat SVG</additionalOption>
                     </additionalOptions>
                 </configuration>
+            </plugin>
+
+            <!-- Maven Assembly plugin for JAR files -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.6.0</version>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.koteseni.ijaproj.Main</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
